<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimaryVariant"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/working_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="24dp"
        android:padding="24dp"
        android:textAlignment="textEnd"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/result_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/advanceMaths"
        tools:text="12/5" />

    <TextView
        android:id="@+id/result_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/_0"
        android:importantForAutofill="no"
        android:padding="24dp"
        android:textAlignment="textEnd"
        android:textSize="36sp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@id/frame"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/working_text"
        app:layout_constraintVertical_bias="0.3"
        tools:text="2.4" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/leftBracketButton"
        style="@style/Button_num"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_1"
        android:text="@string/left_bracket"
        android:textColor="@color/teal"
        app:layout_constraintBottom_toTopOf="@id/seven_Button"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/rightBracketButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/frame" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/rightBracketButton"
        style="@style/Button_num"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_1"
        android:text="@string/right_bracket"
        android:textColor="@color/teal"
        app:layout_constraintBottom_toTopOf="@+id/eightButton"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/clearButton"
        app:layout_constraintStart_toEndOf="@id/leftBracketButton"
        app:layout_constraintTop_toTopOf="@id/frame" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/clearButton"
        style="@style/Button_num"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_1"
        android:text="@string/clear"
        android:textColor="@color/teal"
        app:layout_constraintBottom_toTopOf="@id/nineButton"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/subtractionButton"
        app:layout_constraintStart_toEndOf="@id/rightBracketButton"
        app:layout_constraintTop_toTopOf="@id/frame" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/zeroButton"
        style="@style/Button_num"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_1"
        android:text="@string/_0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/decimalButton"
        app:layout_constraintStart_toEndOf="@+id/allClearButton"
        app:layout_constraintTop_toBottomOf="@+id/twoButton" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/threeButton"
        style="@style/Button_num"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_1"
        android:text="@string/_3"
        app:layout_constraintBottom_toTopOf="@id/decimalButton"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/plusButton"
        app:layout_constraintStart_toEndOf="@id/twoButton"
        app:layout_constraintTop_toBottomOf="@+id/sixButton" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/twoButton"
        style="@style/Button_num"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_1"
        android:text="@string/_2"
        app:layout_constraintBottom_toTopOf="@+id/zeroButton"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/threeButton"
        app:layout_constraintStart_toEndOf="@+id/oneButton"
        app:layout_constraintTop_toBottomOf="@+id/fiveButton" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/oneButton"
        style="@style/Button_num"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_1"
        android:text="@string/_1"
        app:layout_constraintBottom_toTopOf="@id/allClearButton"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/twoButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fourButton" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sixButton"
        style="@style/Button_num"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_1"
        android:text="@string/_6"
        app:layout_constraintBottom_toTopOf="@id/threeButton"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/minusButton"
        app:layout_constraintStart_toEndOf="@+id/fiveButton"
        app:layout_constraintTop_toBottomOf="@+id/nineButton" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/fiveButton"
        style="@style/Button_num"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_1"
        android:text="@string/_5"
        app:layout_constraintBottom_toTopOf="@+id/twoButton"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/sixButton"
        app:layout_constraintStart_toEndOf="@+id/fourButton"
        app:layout_constraintTop_toBottomOf="@+id/eightButton" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/fourButton"
        style="@style/Button_num"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_1"
        android:text="@string/_4"
        app:layout_constraintBottom_toTopOf="@id/oneButton"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/fiveButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seven_Button" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/nineButton"
        style="@style/Button_num"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_1"
        android:text="@string/_9"
        app:layout_constraintBottom_toTopOf="@id/sixButton"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/multiplicationButton"
        app:layout_constraintStart_toEndOf="@id/eightButton"
        app:layout_constraintTop_toBottomOf="@+id/clearButton" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/eightButton"
        style="@style/Button_num"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_1"
        android:text="@string/_8"
        app:layout_constraintBottom_toTopOf="@+id/fiveButton"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/nineButton"
        app:layout_constraintStart_toEndOf="@+id/seven_Button"
        app:layout_constraintTop_toBottomOf="@+id/rightBracketButton" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/seven_Button"
        style="@style/Button_num"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_1"
        android:text="@string/_7"
        app:layout_constraintBottom_toTopOf="@id/fourButton"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/eightButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/leftBracketButton" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/minusButton"
        style="@style/Button_num"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_1"
        android:text="@string/minus"
        android:textColor="@color/orangish"
        app:layout_constraintBottom_toTopOf="@+id/plusButton"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/sixButton"
        app:layout_constraintTop_toBottomOf="@+id/multiplicationButton" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/plusButton"
        style="@style/Button_num"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_1"
        android:text="@string/plus"
        android:textColor="@color/orangish"
        app:layout_constraintBottom_toTopOf="@id/equalsToButton"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/threeButton"
        app:layout_constraintTop_toBottomOf="@+id/minusButton" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/equalsToButton"
        style="@style/Button_num"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_1"
        android:text="@string/equals_to"
        android:textColor="@color/orangish"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/decimalButton"
        app:layout_constraintTop_toBottomOf="@+id/plusButton" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/multiplicationButton"
        style="@style/Button_num"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_1"
        android:text="@string/multiply"
        android:textColor="@color/orangish"
        app:layout_constraintBottom_toTopOf="@id/minusButton"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/nineButton"
        app:layout_constraintTop_toBottomOf="@+id/subtractionButton" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/subtractionButton"
        style="@style/Button_num"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_1"
        android:text="@string/divide"
        android:textColor="@color/orangish"
        app:layout_constraintBottom_toTopOf="@id/multiplicationButton"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/clearButton"
        app:layout_constraintTop_toTopOf="@id/frame" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/allClearButton"
        style="@style/Button_num"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_1"
        android:text="@string/clear_All"
        android:textColor="@color/red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/zeroButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/oneButton" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/decimalButton"
        style="@style/Button_num"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_1"
        android:text="@string/decimal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/equalsToButton"
        app:layout_constraintStart_toEndOf="@id/zeroButton"
        app:layout_constraintTop_toBottomOf="@+id/threeButton" />


    <View
        android:id="@+id/frame"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/holder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/result_text" />
    <!--    may not need this view -->

    <com.google.android.material.button.MaterialButton
        android:id="@+id/advanceMaths"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:text="@string/advance"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/advOption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <include layout="@layout/bottom_sheet" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>


</androidx.constraintlayout.widget.ConstraintLayout>


